--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -13,7 +13,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
@@ -67,6 +67,9 @@ a {
 .content .dialog-window-wrapper {
   height: calc(100% - 64px);
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .content .menu .desktop-icons {
@@ -234,12 +237,41 @@ a {
 }
 
 @media all and (max-width: 1024px) {
+  #portfolioDialog {
+    position: static;
+  }
+
+  #servicesDialog {
+    position: static;
+  }
+
+  #contactDialog {
+    position: static;
+  }
+
+  .content .dialog-window-wrapper .dialog-window .dialog-body .services-image {
+    width: 100%;
+    height: auto;
+  }
+
+  .content
+    .dialog-window-wrapper
+    .dialog-window
+    .dialog-body
+    .services-description {
+    width: 100%;
+  }
+
   .footer .floating-text {
     font-size: 1.5rem;
   }
 }
 
 @media all and (max-width: 768px) {
+  .content {
+    flex-direction: column !important;
+  }
+
   .footer .floating-text {
     display: none;
   }
